<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/describe_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/please_login_yourself"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/register_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/app_logo_square"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/my_friends_logo" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edittext"
                style="@style/custom_edittext_style"
                android:layout_width="match_parent"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_email_id"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/password_edittext"
                style="@style/custom_edittext_style"
                android:layout_width="match_parent"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:autofillHints="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/error_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/account_does_not_exist_register_new_user"
                android:textColor="@color/color3"
                android:textSize="15sp" />

            <Button
                android:id="@+id/register_button"
                style="@style/bottom_button"
                android:layout_width="match_parent"
                android:text="@string/login" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>