<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/close_icon"
                    app:tint="@color/color4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/select_post"
                    android:textColor="@color/color4"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_buttons"
        android:layout_below="@id/app_bar_layout"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:padding="5dp"
            android:id="@+id/post_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@drawable/imageview_background"
            android:scaleType="centerInside" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/description_edittext"
            style="@style/custom_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/description" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:gravity="center"
            android:textColor="@color/design_default_color_error"
            android:id="@+id/error_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_image_button"
            style="@style/bottom_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/post_button"
            style="@style/bottom_button"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/post_image" />

    </LinearLayout>

</RelativeLayout>