<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/back_button"
                    android:gravity="center_vertical"
                    android:text="@string/edit_profile"
                    android:textColor="@color/color4"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/arrow_back_icon"
                    app:tint="@color/color4" />

                <ImageView
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/save_done_icon"
                    app:tint="@color/color4" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/profile_pic_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/grey"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/change_pic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Profile Pic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/fullname_edittext"
            style="@style/custom_edittext_style"
            android:layout_width="match_parent"
            android:hint="@string/enter_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/username_edittext"
            style="@style/custom_edittext_style"
            android:layout_width="match_parent"
            android:hint="@string/enter_username" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/bio_edittext"
            style="@style/custom_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bio" />
    </LinearLayout>

</RelativeLayout>