<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/back_button"
                    android:gravity="center_vertical"
                    android:text="@string/comments"
                    android:textColor="@color/color4"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/arrow_back_icon"
                    app:tint="@color/color4" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_comment_card"
        android:layout_below="@id/app_bar_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_comment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color4"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/profile_pic_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_icon" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/add_comment_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_toStartOf="@id/post_button"
                android:layout_toEndOf="@id/image_card"
                android:hint="@string/add_a_comment" />

            <Button
                android:id="@+id/post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:text="@string/post" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>